change title to Test

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
         </ul>
         <div class="profile-photo">
           <img src="/photo/download.jpg" alt="profile-photo" />
-          <h4>Annayev Orazmammet</h4>
+          <h4>Test Testov</h4>
         </div>
       </div>
     </div>
